--- a/web-client/views/signup.hbs
+++ b/web-client/views/signup.hbs
@@ -1,4 +1,4 @@
-<form action="/users/login" method="post">
+<form action="/users/signup" method="post">
     <div>
         <label>Email:</label>
         <input type="text" name="email"/>
@@ -8,6 +8,6 @@
         <input type="password" name="password"/>
     </div>
     <div>
-        <input type="submit" value="Log In"/>
+        <input type="submit" value="Sign Up"/>
     </div>
 </form>
